# hackscraper

./: Dockerfile  a.py  aggregator.py  app.py  config.py  direct_scraper.py  general.py  hack.clean.txt  hack.html  hack.txt  hackatum.py  llm_support.py  main.py  models.py  password.txt  pyproject.toml
apps/_default/: __init__.py  common.py  controllers.py  models.py  settings.py  tasks.py
apps/_default/static/css/: bamboo.css  no.css  style.css
apps/_default/static/js/: utils.js
apps/_default/templates/: about.html  auth.html  index.html  layout.html
apps/_default/templates/admin/: grid.html  suggestion.html
templates/: add_hackathon.html  add_scraper.html  admin.html  edit_scraper.html  index.html  scrapers.html  suggestion_detail.html  suggestions.html
tests/: direct_scraper_test.py
