[project]
name = "hackscrape"
version = "0.1.0"
description = "Hackathon finder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "requests>=2.32.3",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.29.1",
    "jupyter>=1.1.1",
    "ruff>=0.9.9",
]
